--- a/training/html/yesterday.html
+++ b/training/html/yesterday.html
@@ -2,19 +2,19 @@
 <html lang="ko">
 <head>
   <title>MKK`s diary</title>
-  <link href="./index.css" rel="stylesheet">
+  <link href="../index.css" rel="stylesheet">
 </head>
 <body>
   <div class="outerbox">
     <div class="header__wrapper">
       <div class="logo"> HAGD </div>
       <div class="diaryLink">
-        <a href="./html/yesterday.html" class="link">어제의 일기</a>
-        <a href="" class="link">오늘의 일기</a>
-        <a href="./html/tomorrow.html" class="link">내일의 일기</a>
+        <a href="" class="link">어제의 일기</a>
+        <a href="../index.html" class="link">오늘의 일기</a>
+        <a href="./tomorrow.html" class="link">내일의 일기</a>
       </div>
       <div class="img">
-        <img src="./images/profile.png">
+        <img src="../images/profile.png">
       </div>
     </div>
     <div class="wrapper">
@@ -24,7 +24,7 @@
             나만의 일기장
           </div>
           <div class="header__body">
-            <div class="body1">나만의 일기장입니다!<br> Rest day!</div>
+            <div class="body1">나만의 일기장입니다!<br> Pull Day!</div>
             <div class="body2">HAVE A GOOD DAY 😊</div>
           </div>
         </div>
@@ -35,12 +35,12 @@
           </div>
           <div class="body__body">
             <div class="body">
-              오늘은 배가 아파서 운동을 쉬었다.<br>
-              평소 먹는 걸 그렇게 좋아하지는 않는데, 운동만 하면 많이 먹어야된다는 강박이 생긴다.<br>
-              그래서 과식을 하게되고 결국 탈이 난다. 이대로 가다간 왠지 탈이 날 것 같아 운동도, 먹는 것도 쉬기로 했다.<br>
+              당기기 운동이 겁나 잘됐다.<br>
+              운동이 잘되는 날은 꽤나 기분이 좋다.<br>
+              다만 너무 열심히 해서 아침에 조금 피곤했다.<br>
             </div>
             <div class="end">
-              2023년 3월 28일. <br> 날씨 그럭저럭 😒
+              2023년 3월 27일. <br> 날씨 맑음 😊
             </div>
           </div>
         </div>
