--- a/training-02/index.html
+++ b/training-02/index.html
@@ -19,13 +19,13 @@
     <container>
       <div class="list__wrapper">
         <div class="list">
-          <div>New items</div>
-          <div>Best Items</div>
-          <div>상품 목록</div>
-          <div>중고 마켓</div>
+          <div class="menu">New items</div>
+          <div class="menu">Best Items</div>
+          <div class="menu">상품 목록</div>
+          <div class="menu">중고 마켓</div>
         </div>
         <div class="admin">
-          <span>상품 등록  ></span>
+          상품 등록 &nbsp&nbsp&nbsp <span class="dash">></span>
         </div>
       </div>
       <div class="body__wrapper">
