--- a/my-shop/index.html
+++ b/my-shop/index.html
@@ -29,20 +29,114 @@
         </div>
       </div>
       <div class="body__wrapper">
-        <div class="body body1"></div>
-        <div class="body body2"></div>
-        <div class="body body3"></div>
-        <div class="body body1"></div>
-        <div class="body body2"></div>
-        <div class="body body3"></div>
-        <div class="body body1"></div>
-        <div class="body body2"></div>
-        <div class="body body3"></div>
-        <div class="body body1"></div>
-        <div class="body body2"></div>
-        <div class="body body3"></div>
-        
-        
+        <div class="item">
+          <div class="imgBox">
+            <img src="./img/item1.jpeg" alt="탁상용 조명">
+          </div>
+          <div class="textBox">
+            <p class="textBox__name">탁상용 조명</p>
+            <p class="textBox__price">260,000 원</p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="imgBox">
+            <img src="./img/item2.png" alt="머그컵">
+          </div>
+          <div class="textBox">
+            <p class="textBox__name">머그컵</p>
+            <p class="textBox__price">32,000 원</p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="imgBox">
+            <img src="./img/item3.jpeg" alt="거실용 슬리퍼">
+          </div>
+          <div class="textBox">
+            <p class="textBox__name">거실용 슬리퍼</p>
+            <p class="textBox__price">28,000 원</p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="imgBox">
+            <img src="./img/item1.jpeg" alt="탁상용 조명">
+          </div>
+          <div class="textBox">
+            <p class="textBox__name">탁상용 조명</p>
+            <p class="textBox__price">260,000 원</p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="imgBox">
+            <img src="./img/item2.png" alt="머그컵">
+          </div>
+          <div class="textBox">
+            <p class="textBox__name">머그컵</p>
+            <p class="textBox__price">32,000 원</p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="imgBox">
+            <img src="./img/item3.jpeg" alt="거실용 슬리퍼">
+          </div>
+          <div class="textBox">
+            <p class="textBox__name">거실용 슬리퍼</p>
+            <p class="textBox__price">28,000 원</p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="imgBox">
+            <img src="./img/item1.jpeg" alt="탁상용 조명">
+          </div>
+          <div class="textBox">
+            <p class="textBox__name">탁상용 조명</p>
+            <p class="textBox__price">260,000 원</p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="imgBox">
+            <img src="./img/item2.png" alt="머그컵">
+          </div>
+          <div class="textBox">
+            <p class="textBox__name">머그컵</p>
+            <p class="textBox__price">32,000 원</p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="imgBox">
+            <img src="./img/item3.jpeg" alt="거실용 슬리퍼">
+          </div>
+          <div class="textBox">
+            <p class="textBox__name">거실용 슬리퍼</p>
+            <p class="textBox__price">28,000 원</p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="imgBox">
+            <img src="./img/item1.jpeg" alt="탁상용 조명">
+          </div>
+          <div class="textBox">
+            <p class="textBox__name">탁상용 조명</p>
+            <p class="textBox__price">260,000 원</p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="imgBox">
+            <img src="./img/item2.png" alt="머그컵">
+          </div>
+          <div class="textBox">
+            <p class="textBox__name">머그컵</p>
+            <p class="textBox__price">32,000 원</p>
+          </div>
+        </div>
+        <div class="item">
+          <div class="imgBox">
+            <img src="./img/item3.jpeg" alt="거실용 슬리퍼">
+          </div>
+          <div class="textBox">
+            <p class="textBox__name">거실용 슬리퍼</p>
+            <p class="textBox__price">28,000 원</p>
+          </div>
+        </div>
       </div>
     </container>
   </div>
